fixed issue with spacing on IE; IE sees \r instead of \n in <pre> tags + fixed // comment issue

--- a/jsyn.html
+++ b/jsyn.html
@@ -30,7 +30,7 @@
  * this
  * insane func
  */
-function addEntry (arg1,arg2,testing) {
+function addEntry (arg1,arg2,testing) {//test
 	var insane = '', too_dles = 0.0;
 	$('#hframe')[0].contentWindow.document.open().close();
 	$('#hframe').contents()[0].location.hash = '#' + (new Date()).getTime();
