flaw with multiple pre.code blocks with different code types + added .py definition + removed more unused vars

--- a/jsyn.html
+++ b/jsyn.html
@@ -13,7 +13,7 @@
 	.code b.k{color:#029;}
 	.code b.d{color:#069;}
 	.code b.w{color:#070;}
-	.code b.f{color:red;}
+	.code b.f{color:black;}
 
 	/* 4char tab spacing - 7px monospace font */
 	.code b.t{display:inline-block; width:28px; height:1px;}
