--- a/trunk/jsyn.html
+++ b/trunk/jsyn.html
@@ -13,7 +13,7 @@
 	.code b.k{color:#029;}
 	.code b.d{color:#069;}
 	.code b.w{color:#070;}
-	.code b.f{color:black;}
+	.code b.f{color:brown;}
 
 	/* 4char tab spacing - 7px monospace font */
 	.code b.t{display:inline-block; width:28px; height:1px;}
